Attaque adversaire fonctionnelle + nouveau CSS

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,5 @@
 GAME :
-_ Attaque ennemi ! (targetuid == 0)
+✔ _ Attaque ennemi ! (targetuid == 0)
 _ Card states [glow] (charge, taunt, confused, stealth, idle != sleeping, not enough MP ...)
 _ Various messages : WAITING, Board full, VICTORY/DEFEAT ... 
 _ Surrender
@@ -17,18 +17,13 @@ _ Error message
 
 
 CARD DATA (PGSQL) :
-"En utilisant une base de données pgsql, vous devez conserver le nombre de
-fois où une carte a été jouée (toutes parties confondues). Il faut ensuite créer
-une page permettant d’afficher (de façon claire et ordonnée selon leur
-popularité), les cartes et leur popularité (ratio en pourcentage de son nombre
-de fois où elle a été jouée divisé par le nombre total de cartes jouées).
-Il doit être possible de supprimer les entrées de votre base de données via un
-bouton prévu à cet effet."
+_ Stats page
+_ Reset button
 
 
 MISC :
     LOCALSTORAGE USERNAME
-    Blank card ?
+✔ _ Blank card ?
 
 
 _ Clean code
@@ -37,7 +32,7 @@ _ Comments
 
 
 
-
+################################################################################################
 SQL :
 
 CREATE TABLE played_cards (
@@ -48,6 +43,3 @@ CREATE TABLE played_cards (
 DROP TABLE played_cards;
 
 SELECT * FROM played_cards;
-
-
-SELECT cardID, times_played, COUNT(times_played) AS somme, ((times_played / SUM(times_played))) AS popularity FROM played_cards GROUP BY played_cards.cardID;
